fix(FSADT1-888): fixing spacing between radio buttons

--- a/frontend/src/assets/styles/global.scss
+++ b/frontend/src/assets/styles/global.scss
@@ -141,6 +141,10 @@ cds-actionable-notification,
   border-radius: 0.25rem;
 }
 
+cds-radio-button:not(:last-child){
+  margin-bottom: 0.5rem;
+}
+
 .top-notification {
   margin-top: 3rem;
   display: flex;
@@ -830,3 +834,6 @@ cds-modal {
     width: 50vw;
   }
 }
+
+
+
